[package]
name = "tui-tree-widget-table"
description = "Tree Widget for ratatui with table"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/gnaaman-dn/tui-rs-tree-widget-table"
authors = ["Gilad Naaman <gnaaman@drivenets.com>"]
edition = "2021"
keywords = ["tui", "terminal", "tree", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.23", default-features = false }
unicode-width = "0.1"

[dev-dependencies]
crossterm = "0.27"
ratatui = "0.23"
